# in-formant

./: .gitignore  CMakeLists.txt  run_build.sh
src/: main.cpp
src/analysis/gmm/: GMM.cpp
src/context/: context.h  contextbuilder.h  contextmanager.cpp  contextmanager.h
src/modules/: modules.h
